# PicoFC

./: .gitignore  .gitmodules  CMakeLists.txt  dshot.pio.h  picoFC.c
drivers/: CMakeLists.txt
drivers/mpu6050/: CMakeLists.txt  driver_mpu6050.c
src/: context.h  driver_mpu6050_interface.c  main.c  picoFC.c
src/control/: control.c  control.h
src/esc/: esc.c  esc.h
src/misc/: crc8.c  crc8.h  misc.c  misc.h
src/pio/: dshot.pio
src/radio/: crsf.c  crsf.h
src/sensors/: driver_hmc5883l_interface.c  driver_hmc5883l_interface.h  driver_mpu6050_interface.c  driver_mpu6050_interface.h
src/tasks/: task_crsf.c  task_leds.c  task_motors.c  task_mpu6050.c  tasks.h
